# git-tutorial

./: .gitignore  README.md  pyproject.toml
git_tutorial/: __init__.py  challenges.py  cli.py  content.py  progress.py  quiz.py  renderer.py  sandbox.py  scenario.py  session.py
git_tutorial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
git_tutorial/content/01-Getting-Started/: 00. Installing Git.md  01-what-is-git.md  02-installing-configuring.md  03-initializing-repo.md  04-tracking-changes.md  05-viewing-history.md  06-undoing-changes.md  07-ignoring-files.md
git_tutorial/content/02-Branching-Merging/: 01-understanding-branches.md  02-creating-switching-branches.md  03-merging.md  04-merge-conflicts.md  05-stashing.md  06-viewing-differences.md
git_tutorial/content/03-Remotes/: 01-understanding-remotes.md  02-cloning.md  03-pushing-pulling.md  04-remote-branches.md  05-fetch-vs-pull.md
git_tutorial/content/04-Advanced/: 01-rebasing.md  02-cherry-picking.md  03-interactive-rebase.md  04-reset-reflog.md  05-tagging.md  06-bisecting.md
git_tutorial/content/05-Collaboration/: 01-forking-workflow.md  02-pull-requests.md  03-code-review.md  04-git-hooks.md  05-git-workflows.md
git_tutorial/content/06-Internals/: 01-objects-hashing.md  02-three-trees.md  03-plumbing-porcelain.md
git_tutorial/tui/: app.py  content_panel.py  screens.py  sidebar.py  status_bar.py  terminal_panel.py
tests/: conftest.py  test_content.py  test_progress.py  test_quiz.py  test_sandbox.py  test_scenario.py  test_tui.py
