[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-tutorial"
version = "1.0.0"
description = "Interactive Git tutorial: learn, practice, and master Git from your terminal"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Manas Thakur"},
]
keywords = ["git", "tutorial", "learning", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "textual>=8.0",
]

[project.urls]
Homepage = "https://github.com/Manas-thakur/git-tutorial"
Source = "https://github.com/Manas-thakur/git-tutorial"

[project.scripts]
gittut = "git_tutorial:main"
gittut-cli = "git_tutorial.cli:app"

[tool.setuptools.packages.find]
include = ["git_tutorial*"]

[tool.setuptools.package-data]
git_tutorial = ["content/**/*.md"]
